follow-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: follow-httproute
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /follow/
      method: POST
    - path:
        type: PathPrefix
        value: /follows
      method: GET
    - path:
        type: PathPrefix
        value: /follow/
      method: DELETE
    backendRefs:
    - name: follow-service
      port: 8000
